CommonJS time. Oh yeah, using Stitch to compile the JS

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "jquery": "latest",
     "coffee-script": "latest",
-    "underscore": "latest"
+    "underscore": "latest",
+    "stitch": "latest"
   }
 }
