Remove dependency graph

--- a/package.json
+++ b/package.json
@@ -12,15 +12,10 @@
   },
   "keywords": [
     "jquery",
-    "plugins",
-    "beautiful",
-    "code",
     "coffee-script"
+    "plugins",
+    "framework"
   ],
   "author": "Tom Scott",
-  "license": "MIT",
-  "dependencies": {
-    "jquery": "latest",
-    "coffee-script": "latest"
-  }
+  "license": "MIT"
 }
