--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Tom Scott",
   "license": "MIT",
   "dependencies": {
-    "coffee-script": "~1.6.1"
+    "coffee-script": "~1.6.1",
+    "docco": "~0.6.1"
   }
 }
