--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "coffee-script": "~1.6.1",
-    "docco": "~0.6.1"
+    "docco": "~0.6.1",
+    "bower": "~0.8.5"
   }
 }
